# polymarket-trader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.base  README.md  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.gcp.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  tsconfig.json  vitest.config.ts
docs/: DATA_COLLECTION_IMPROVEMENTS.md  gcp-deployment.md
models/: rl-model.json
python/: pyproject.toml
python/api/: __init__.py  optimizer_server.py
python/combiners/: __init__.py  ml_combiner.py
python/optimizers/: __init__.py  bayesian_optimizer.py
scripts/: README.md  add-missing-tables.js  aggressive-cleanup.js  analyze-closures.js  analyze-losses.js  analyze-price-issues.js  analyze-signal-neutrality.js  analyze-signal-quality.js  analyze-signals.js  analyze-tables.js  analyze-top100-coverage.js  analyze-trades.js  auto-update.sh  backfill-categories.js  backup.sh  check-1dollar-positions.js  check-activity.js  check-circuit-breaker-trigger.js  check-data.js  check-exits.js  check-id-match.js  check-integrity.js  check-market-resolutions.js  check-market-sync.js  check-new-positions.js  check-no-token-trades.js  check-opt-params.js  check-optimizer.js  check-overnight-status.js  check-predictions-status.js  check-price-movement.js  check-price-quality.js  check-recent-5min.js  check-recent-activity.js  check-recent-sells.js  check-recent-trades.js  check-retention-status.js  check-short-blockers.js  check-short-markets.js  check-signal-distribution.js  (+44 more)
(+23 files in other folders)
